worked on add dynamic event